--- a/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
@@ -1,35 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="519.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-   
-             <Label fx:id="welcomeText" layoutX="26.0" layoutY="21.0" text="label" />
-       <Button fx:id="btnHello" layoutX="328.0" layoutY="461.0" onAction="#onHelloButtonClick" text="Hello!" />
-      <ComboBox fx:id="comboBoxColores" layoutX="26.0" layoutY="58.0" prefWidth="150.0" />
-      <ImageView fx:id="imgViewEjemplo" fitHeight="150.0" fitWidth="200.0" layoutX="26.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="558.0" fitWidth="968.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../../Downloads/imagen.png" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="619.0" layoutY="101.0" opacity="0.93" prefHeight="384.0" prefWidth="295.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 3;">
+         <children>
+            <AnchorPane layoutX="25.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10;">
+               <children>
+                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="162.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10;">
+               <children>
+                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="25.0" layoutY="143.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10;">
+               <children>
+                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="162.0" layoutY="143.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10;">
+               <children>
+                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="25.0" layoutY="261.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10;">
+               <children>
+                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="162.0" layoutY="261.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10;">
+               <children>
+                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
+      <Label cache="true" contentDisplay="TOP" layoutX="83.0" layoutY="22.0" opacity="0.94" prefHeight="65.0" prefWidth="836.0" style="-fx-background-color: #49D5C6; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-color: black; -fx-border-width: 1.5;" text=" EQUIPO POKEMON" textAlignment="RIGHT" textOverrun="WORD_ELLIPSIS" wrapText="true">
+         <font>
+            <Font name="Arial" size="33.0" />
+         </font>
          <effect>
             <InnerShadow />
          </effect>
-      </ImageView>
-      <ProgressBar fx:id="progressBar" layoutX="34.0" layoutY="304.0" prefWidth="200.0" progress="0.0" />
-      <ListView fx:id="listView" layoutX="484.0" layoutY="21.0" prefHeight="200.0" prefWidth="200.0" />
-      <TableView fx:id="tableView" layoutX="484.0" layoutY="240.0" prefHeight="200.0" prefWidth="200.0">
-        <columns>
-          <TableColumn fx:id="imageColumn" prefWidth="75.0" text="image" />
-          <TableColumn fx:id="nameColumn" prefWidth="75.0" text="name" />
-        </columns>
-      </TableView>
+      </Label>
+      <AnchorPane layoutX="83.0" layoutY="101.0" prefHeight="384.0" prefWidth="471.0" style="-fx-background-color: #43CEB5;">
+         <children>
+            <ImageView fitHeight="177.0" fitWidth="126.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+               </image>
+            </ImageView>
+            <Label layoutX="214.0" layoutY="30.0" prefHeight="46.0" prefWidth="226.0" text="Label" />
+            <Label layoutX="214.0" layoutY="71.0" prefHeight="46.0" prefWidth="226.0" text="Label" />
+            <Label layoutX="214.0" layoutY="113.0" prefHeight="46.0" prefWidth="226.0" text="Label" />
+            <ProgressBar layoutX="214.0" layoutY="163.0" prefWidth="200.0" progress="0.0" />
+            <TextArea layoutX="36.0" layoutY="215.0" prefHeight="98.0" prefWidth="399.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
