--- a/src/main/resources/es/cesur/progprojectpok/view/login-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/login-view.fxml
@@ -2,38 +2,48 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="519.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.LoginController">
+<AnchorPane prefHeight="581.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.LoginController">
    <children>
-      <ImageView fitHeight="541.0" fitWidth="836.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="600.0" fitWidth="930.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/fondo-login.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="66.0" fitWidth="208.0" layoutX="328.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="88.0" fitWidth="215.0" layoutX="358.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/logo-pokemon.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="264.0" layoutY="105.0" opacity="0.74" prefHeight="295.0" prefWidth="308.0" style="-fx-background-color: #43CEB5;">
+      <AnchorPane layoutX="300.0" layoutY="120.0" opacity="0.93" prefHeight="325.0" prefWidth="331.0" style="-fx-background-color: #43CEB5; -fx-background-radius: 10;" AnchorPane.rightAnchor="299.0">
+         <children>
+            <PasswordField fx:id="passUser" layoutX="76.0" layoutY="131.0" prefHeight="32.0" prefWidth="180.0" promptText="PASSWORD" />
+            <CheckBox fx:id="rememberBtn" layoutX="76.0" layoutY="179.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="121.0" text="REMEMBER ME" textFill="#fffbfb" />
+            <TextField fx:id="userId" layoutX="76.0" layoutY="86.0" prefHeight="32.0" prefWidth="180.0" promptText="USERNAME" />
+            <Button layoutX="86.0" layoutY="222.0" mnemonicParsing="false" onAction="#loginUser" prefHeight="32.0" prefWidth="161.0" text="Login" />
+            <Label layoutX="91.0" layoutY="26.0" prefHeight="32.0" prefWidth="149.0" text="INICIO SESIÓN">
+               <font>
+                  <Font name="System Bold" size="21.0" />
+               </font>
+            </Label>
+            <Button layoutX="105.0" layoutY="268.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="32.0" prefWidth="121.0" text="REGISTER" />
+         </children>
          <effect>
             <InnerShadow />
          </effect>
       </AnchorPane>
-      <AnchorPane layoutX="400.0" layoutY="110.0" prefHeight="286.0" prefWidth="306.0" AnchorPane.rightAnchor="270.0">
-         <children>
-            <PasswordField layoutX="79.0" layoutY="131.0" promptText="PASSWORD" />
-            <CheckBox layoutX="79.0" layoutY="174.0" mnemonicParsing="false" text="REMEMBER ME" textFill="#fffbfb" />
-            <TextField layoutX="79.0" layoutY="95.0" promptText="USERNAME" />
-            <TextField fx:id="inicio1" alignment="CENTER" editable="false" layoutX="67.0" layoutY="35.0" prefHeight="32.0" prefWidth="174.0" style="-fx-border-radius: 50;" text="INICIO SESIÓN" />
-            <Button layoutX="80.0" layoutY="206.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="149.0" text="Login" />
-         </children>
-      </AnchorPane>
+      <Button fx:id="exitBtn" layoutX="815.0" layoutY="26.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="81.0" style="-fx-background-color: #09683F; -fx-border-color: black; -fx-border-width: 1.5;" text="EXIT" textFill="WHITE" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="21.0">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
