Commit Clases conexion BD

--- a/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
@@ -13,7 +14,7 @@
    <children>
       <ImageView fitHeight="558.0" fitWidth="968.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../../Downloads/imagen.png" />
+            <Image url="@../images/Fondo-EquipoPokemon-view.png" />
          </image>
       </ImageView>
       <AnchorPane layoutX="619.0" layoutY="101.0" opacity="0.93" prefHeight="384.0" prefWidth="295.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 3;">
@@ -22,7 +23,7 @@
                <children>
                   <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                        <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
                </children>
@@ -31,7 +32,7 @@
                <children>
                   <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                        <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
                </children>
@@ -40,7 +41,7 @@
                <children>
                   <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                        <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
                </children>
@@ -49,7 +50,7 @@
                <children>
                   <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                        <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
                </children>
@@ -58,7 +59,7 @@
                <children>
                   <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                        <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
                </children>
@@ -67,14 +68,14 @@
                <children>
                   <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                        <Image url="@../images/Gif-Pok.gif" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Label cache="true" contentDisplay="TOP" layoutX="83.0" layoutY="22.0" opacity="0.94" prefHeight="65.0" prefWidth="836.0" style="-fx-background-color: #49D5C6; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-color: black; -fx-border-width: 1.5;" text=" EQUIPO POKEMON" textAlignment="RIGHT" textOverrun="WORD_ELLIPSIS" wrapText="true">
+      <Label cache="true" contentDisplay="TOP" layoutX="78.0" layoutY="25.0" opacity="0.94" prefHeight="65.0" prefWidth="836.0" style="-fx-background-color: #49D5C6; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-color: black; -fx-border-width: 1.5;" text=" EQUIPO POKEMON" textAlignment="RIGHT" textOverrun="WORD_ELLIPSIS" wrapText="true">
          <font>
             <Font name="Arial" size="33.0" />
          </font>
@@ -82,19 +83,31 @@
             <InnerShadow />
          </effect>
       </Label>
-      <AnchorPane layoutX="83.0" layoutY="101.0" prefHeight="384.0" prefWidth="471.0" style="-fx-background-color: #43CEB5;">
+      <AnchorPane layoutX="83.0" layoutY="127.0" prefHeight="333.0" prefWidth="500.0" style="-fx-background-color: #43CEB5;">
          <children>
-            <ImageView fitHeight="177.0" fitWidth="126.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="119.0" fitWidth="119.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../../Downloads/ani_bw_006.gif" />
+                  <Image url="@../images/Gif-Pok.gif" />
                </image>
             </ImageView>
-            <Label layoutX="214.0" layoutY="30.0" prefHeight="46.0" prefWidth="226.0" text="Label" />
-            <Label layoutX="214.0" layoutY="71.0" prefHeight="46.0" prefWidth="226.0" text="Label" />
-            <Label layoutX="214.0" layoutY="113.0" prefHeight="46.0" prefWidth="226.0" text="Label" />
-            <ProgressBar layoutX="214.0" layoutY="163.0" prefWidth="200.0" progress="0.0" />
-            <TextArea layoutX="36.0" layoutY="215.0" prefHeight="98.0" prefWidth="399.0" />
+            <TextArea layoutX="36.0" layoutY="215.0" prefHeight="98.0" prefWidth="443.0" />
+            <AnchorPane layoutX="160.0" layoutY="36.0" prefHeight="131.0" prefWidth="0.0" style="-fx-border-color: LIGHTBLUE;">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </AnchorPane>
+            <ProgressBar layoutX="183.0" layoutY="158.0" prefWidth="200.0" progress="0.0" />
+            <Label layoutX="183.0" layoutY="36.0" prefHeight="41.0" prefWidth="260.0" text="CHARIZARD" />
+            <ImageView fitHeight="41.0" fitWidth="42.0" layoutX="183.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../Downloads/Type_Tierra.jpeg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="41.0" fitWidth="42.0" layoutX="237.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
          </children>
+         <effect>
+            <InnerShadow />
+         </effect>
       </AnchorPane>
    </children>
 </AnchorPane>
