--- a/src/main/resources/es/cesur/progprojectpok/view/login-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/login-view.fxml
@@ -35,6 +35,7 @@
                </font>
             </Label>
             <Button layoutX="105.0" layoutY="268.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="32.0" prefWidth="121.0" text="REGISTER" />
+            <Label fx:id="usuarioCorrecto" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="74.0" layoutY="58.0" prefHeight="13.0" prefWidth="180.0" text="Label" textAlignment="RIGHT" />
          </children>
          <effect>
             <InnerShadow />
