--- a/src/main/resources/es/cesur/progprojectpok/view/login-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/login-view.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="581.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.LoginController">
+<AnchorPane prefHeight="581.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.LoginController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="930.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -35,13 +30,13 @@
                </font>
             </Label>
             <Button layoutX="105.0" layoutY="268.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="32.0" prefWidth="121.0" text="REGISTER" />
-            <Label fx:id="usuarioCorrecto" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="74.0" layoutY="58.0" prefHeight="13.0" prefWidth="180.0" text="Label" textAlignment="RIGHT" />
+            <Label fx:id="usuarioCorrecto" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="74.0" layoutY="58.0" prefHeight="13.0" prefWidth="180.0" textAlignment="RIGHT" />
          </children>
          <effect>
             <InnerShadow />
          </effect>
       </AnchorPane>
-      <Button fx:id="exitBtn" layoutX="815.0" layoutY="26.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="81.0" style="-fx-background-color: #09683F; -fx-border-color: black; -fx-border-width: 1.5;" text="EXIT" textFill="WHITE" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="21.0">
+      <Button layoutX="815.0" layoutY="26.0" mnemonicParsing="false" onAction="#btnExit" prefHeight="47.0" prefWidth="81.0" style="-fx-background-color: #09683F; -fx-border-color: black; -fx-border-width: 1.5;" text="EXIT" textFill="WHITE" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="21.0">
          <font>
             <Font size="20.0" />
          </font>
