--- a/src/main/resources/es/cesur/progprojectpok/view/pc-pokemon-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/pc-pokemon-view.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="553.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
@@ -11,7 +14,7 @@
                 <Image url="@../images/fondo-pc.jpg" />
             </image>
         </ImageView>
-      <AnchorPane fx:id="fondoMain" layoutX="192.0" layoutY="10.0" opacity="0.95" prefHeight="533.0" prefWidth="744.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 3;">
+      <AnchorPane fx:id="fondoMain" layoutX="192.0" layoutY="10.0" prefHeight="533.0" prefWidth="744.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 12; -fx-border-width: 3;">
          <children>
             <AnchorPane layoutX="495.0" layoutY="410.0" prefHeight="81.0" prefWidth="94.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
@@ -122,14 +125,33 @@
                   <Image url="@../images/91873.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="66.0" fitWidth="177.0" layoutX="241.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="52.0" fitWidth="165.0" layoutX="319.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/logo-pixel.png" />
                </image>
             </ImageView>
+            <AnchorPane layoutX="22.0" layoutY="467.0" prefHeight="52.0" prefWidth="129.0" style="-fx-border-color: black; -fx-border-radius: 5;">
+               <children>
+                  <Button alignment="CENTER" layoutX="2.0" layoutY="2.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="39.0" style="-fx-background-color: white;" text="&lt;">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button alignment="CENTER" layoutX="90.0" layoutY="2.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="39.0" style="-fx-background-color: white;" text="&gt;">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Label alignment="CENTER" layoutX="40.0" layoutY="2.0" prefHeight="52.0" prefWidth="51.0" style="-fx-background-color: white;" text="CAJA 1">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
-        <AnchorPane layoutX="14.0" layoutY="85.0" prefHeight="384.0" prefWidth="278.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 10; -fx-border-width: 3;">
+        <AnchorPane layoutX="14.0" layoutY="85.0" prefHeight="384.0" prefWidth="278.0" style="-fx-border-color: black; -fx-background-color: #43CEB5; -fx-border-radius: 10; -fx-background-radius: 12; -fx-border-width: 3;">
             <children>
                 <AnchorPane layoutX="25.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
@@ -166,5 +188,10 @@
                 </AnchorPane>
             </children>
         </AnchorPane>
+      <Button fx:id="btnBACK" layoutX="45.0" layoutY="14.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="129.0" style="-fx-background-radius: 10; -fx-border-color: black; -fx-border-width: 2; -fx-border-radius: 10; -fx-background-color: D62E2E;" text="VOLVER" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
