--- a/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/equipo-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="536.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.EquipoController">
    <children>
       <ImageView fitHeight="558.0" fitWidth="968.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -20,16 +20,12 @@
          <children>
             <AnchorPane layoutX="25.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/Gif-Pok.gif" />
-                     </image>
-                  </ImageView>
+                  <ImageView fx:id="img1" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="162.0" layoutY="23.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img2" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -38,7 +34,7 @@
             </AnchorPane>
             <AnchorPane layoutX="25.0" layoutY="143.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img3" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -47,7 +43,7 @@
             </AnchorPane>
             <AnchorPane layoutX="162.0" layoutY="143.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img4" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -56,7 +52,7 @@
             </AnchorPane>
             <AnchorPane layoutX="25.0" layoutY="261.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img5" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -65,7 +61,7 @@
             </AnchorPane>
             <AnchorPane layoutX="162.0" layoutY="261.0" prefHeight="98.0" prefWidth="93.0" style="-fx-border-color: black; -fx-border-width: 1.5; -fx-border-radius: 10; -fx-background-color: #21C190;">
                <children>
-                  <ImageView fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img6" fitHeight="65.0" fitWidth="67.0" layoutX="18.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/Gif-Pok.gif" />
                      </image>
@@ -84,7 +80,7 @@
       </Label>
       <AnchorPane layoutX="89.0" layoutY="120.0" prefHeight="333.0" prefWidth="500.0" style="-fx-background-color: #43CEB5; -fx-border-color: #21C190; -fx-border-width: 8;">
          <children>
-            <ImageView fitHeight="119.0" fitWidth="119.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgFinal" fitHeight="119.0" fitWidth="119.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/Gif-Pok.gif" />
                </image>
