--- a/src/main/resources/es/cesur/progprojectpok/view/centro-pokemon-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/centro-pokemon-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="401.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.HelloController">
+<AnchorPane prefHeight="401.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CentroPokController">
    <children>
       <ImageView fitHeight="519.0" fitWidth="715.0" pickOnBounds="true" preserveRatio="true">
          <image>
