--- a/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -12,7 +19,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="509.0" prefWidth="922.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.HelloController">
+<AnchorPane fx:id="cerrarCombatePK" prefHeight="509.0" prefWidth="922.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CombateController">
    <children>
       <ImageView fitHeight="524.0" fitWidth="1013.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -21,7 +28,7 @@
       </ImageView>
       <AnchorPane layoutY="521.0" prefHeight="160.0" prefWidth="1013.0" style="-fx-background-color: #742005; -fx-border-color: #000000; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;">
          <children>
-            <Button layoutX="636.0" layoutY="11.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="LUCHAR">
+            <Button layoutX="636.0" layoutY="11.0" mnemonicParsing="false" onAction="#btnLuchar" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: pink; -fx-background-radius: 20;" text="LUCHAR">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -30,12 +37,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -50,7 +57,7 @@
                   <Image url="@../images/pokeball.png" />
                </image>
             </ImageView>
-            <Button layoutX="636.0" layoutY="81.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #149D10; -fx-background-radius: 20;" text="POKéMON">
+            <Button layoutX="636.0" layoutY="81.0" mnemonicParsing="false" onAction="#btnPK" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #149D10; -fx-background-radius: 20;" text="POKéMON">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -59,12 +66,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -74,7 +81,7 @@
                   <InnerShadow />
                </effect>
             </Button>
-            <Button layoutX="819.0" layoutY="11.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #C88B09; -fx-background-radius: 20;" text="MOCHILA">
+            <Button layoutX="819.0" layoutY="11.0" mnemonicParsing="false" onAction="#btnMochila" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #C88B09; -fx-background-radius: 20;" text="MOCHILA">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -83,12 +90,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -98,7 +105,7 @@
                   <InnerShadow />
                </effect>
             </Button>
-            <Button layoutX="819.0" layoutY="81.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #0C9B8D; -fx-background-radius: 20;" text="HUIR">
+            <Button layoutX="819.0" layoutY="81.0" mnemonicParsing="false" onAction="#btnHuir" prefHeight="63.0" prefWidth="164.0" style="-fx-background-color: #0C9B8D; -fx-background-radius: 20;" text="HUIR">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -107,12 +114,12 @@
                      <stops>
                         <Stop>
                            <color>
-                              <Color red="0.30000001192092896" green="0.04500000178813934" blue="0.2471785694360733" />
+                              <Color blue="0.2471785694360733" green="0.04500000178813934" red="0.30000001192092896" />
                            </color>
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.8684210777282715" green="0.12865497171878815" blue="0.12865497171878815" />
+                              <Color blue="0.12865497171878815" green="0.12865497171878815" red="0.8684210777282715" />
                            </color>
                         </Stop>
                      </stops>
@@ -122,7 +129,7 @@
                   <InnerShadow />
                </effect>
             </Button>
-            <AnchorPane layoutX="30.0" layoutY="15.0" opacity="0.6" prefHeight="133.0" prefWidth="344.0" style="-fx-background-color: linear-gradient(to bottom, white, #CDD7D6); -fx-background-radius: 15; -fx-border-radius: 15; -fx-border-color: linear-gradient(to bottom, yellow, orange); -fx-border-width: 5;">
+            <AnchorPane layoutX="30.0" layoutY="15.0" opacity="0.6" prefHeight="133.0" prefWidth="344.0" style="-fx-background-color: linear-gradient(to bottom, white, #CDD7D6); -fx-background-radius: 15; -fx-border-radius: 15; -fx-border-color: linear-gradient(to bottom, yellow, orange); -fx-border-width: 5; -fx-opacity: 1;">
                <children>
                   <Label fx:id="lblComb1" alignment="TOP_LEFT" layoutX="16.0" layoutY="13.0" prefHeight="107.0" prefWidth="312.0" text="Label" />
                </children>
@@ -148,7 +155,7 @@
                   <Image url="@../images/male-icon.png" />
                </image>
             </ImageView>
-            <ProgressBar fx:id="prgrsBar1" layoutX="140.0" layoutY="56.0" prefWidth="200.0" progress="0.09" style=" -fx-accent: red"/>
+            <ProgressBar fx:id="prgrsBar1" layoutX="140.0" layoutY="56.0" prefWidth="200.0" progress="0.09" style=" -fx-accent: red" />
             <Label alignment="CENTER_RIGHT" layoutX="100.0" layoutY="48.0" prefHeight="35.0" prefWidth="40.0" text="PS">
                <font>
                   <Font size="14.0" />
