--- a/src/main/resources/es/cesur/progprojectpok/view/centro-pokemon-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/centro-pokemon-view.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="401.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.HelloController">
+<AnchorPane prefHeight="465.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.CentroPokController">
    <children>
-      <ImageView fitHeight="519.0" fitWidth="715.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="514.0" fitWidth="826.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/centro-pokemon.jpeg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="393.0" fitWidth="246.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="cerrarCurar" fitHeight="393.0" fitWidth="246.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/nurse-joy.png" />
          </image>
@@ -33,7 +33,7 @@
             </AnchorPane>
             <AnchorPane layoutX="14.0" layoutY="122.0" prefHeight="82.0" prefWidth="63.0" style="-fx-border-color: black; -fx-border-radius: 5; -fx-background-color: D62E2E; -fx-background-radius: 5;">
                <children>
-                  <ImageView fx:id="imgPok2" fitHeight="80.0" fitWidth="82.0" layoutX="1.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imgPok3" fitHeight="80.0" fitWidth="82.0" layoutX="1.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/criatura-planta.png" />
                      </image>
@@ -42,7 +42,7 @@
             </AnchorPane>
             <AnchorPane layoutX="14.0" layoutY="217.0" prefHeight="81.0" prefWidth="82.0" style="-fx-border-color: black; -fx-border-radius: 5; -fx-background-color: D62E2E; -fx-background-radius: 5;">
                <children>
-                  <ImageView fx:id="imgPok3" fitHeight="80.0" fitWidth="82.0" layoutX="2.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imgPok5" fitHeight="80.0" fitWidth="82.0" layoutX="2.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/criatura-planta.png" />
                      </image>
@@ -51,7 +51,7 @@
             </AnchorPane>
             <AnchorPane layoutX="243.0" layoutY="27.0" prefHeight="80.0" prefWidth="82.0" style="-fx-border-color: black; -fx-border-radius: 5; -fx-background-color: D62E2E; -fx-background-radius: 5;">
                <children>
-                  <ImageView fx:id="imgPok4" fitHeight="80.0" fitWidth="84.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imgPok2" fitHeight="80.0" fitWidth="84.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/criatura-planta.png" />
                      </image>
@@ -66,7 +66,7 @@
             </AnchorPane>
             <AnchorPane layoutX="243.0" layoutY="122.0" prefHeight="80.0" prefWidth="82.0" style="-fx-border-color: black; -fx-border-radius: 5; -fx-background-color: D62E2E; -fx-background-radius: 5;">
                <children>
-                  <ImageView fx:id="imgPok5" fitHeight="80.0" fitWidth="82.0" layoutX="1.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imgPok4" fitHeight="80.0" fitWidth="82.0" layoutX="1.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/criatura-planta.png" />
                      </image>
@@ -85,25 +85,25 @@
             <AnchorPane layoutX="100.0" layoutY="123.0" prefHeight="80.0" prefWidth="132.0" style="-fx-background-color: #21C190; -fx-background-radius: 3; -fx-border-radius: 3; -fx-border-color: black;">
                <children>
                   <Label fx:id="lblPok2" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="106.0" text="Label" />
-                  <ProgressBar fx:id="pgrsbar2" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.76" style=" -fx-accent: green" />
+                  <ProgressBar fx:id="pgrsbar3" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.76" style=" -fx-accent: green" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="100.0" layoutY="217.0" prefHeight="80.0" prefWidth="132.0" style="-fx-background-color: #21C190; -fx-background-radius: 3; -fx-border-radius: 3; -fx-border-color: black;">
                <children>
                   <Label fx:id="lblPok3" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="106.0" text="Label" />
-                  <ProgressBar fx:id="pgrsbar3" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.58" style=" -fx-accent: green" />
+                  <ProgressBar fx:id="pgrsbar5" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.58" style=" -fx-accent: green" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="329.0" layoutY="27.0" prefHeight="80.0" prefWidth="132.0" style="-fx-background-color: #21C190; -fx-background-radius: 3; -fx-border-radius: 3; -fx-border-color: black;">
                <children>
                   <Label fx:id="lblPok4" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="106.0" text="Label" />
-                  <ProgressBar fx:id="pgrsbar4" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.81" style=" -fx-accent: green" />
+                  <ProgressBar fx:id="pgrsbar2" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.81" style=" -fx-accent: green" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="329.0" layoutY="122.0" prefHeight="80.0" prefWidth="132.0" style="-fx-background-color: #21C190; -fx-background-radius: 3; -fx-border-radius: 3; -fx-border-color: black;">
                <children>
                   <Label fx:id="lblPok5" layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="106.0" text="Label" />
-                  <ProgressBar fx:id="pgrsbar5" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.31" style=" -fx-accent: green" />
+                  <ProgressBar fx:id="pgrsbar4" layoutX="13.0" layoutY="48.0" prefHeight="18.0" prefWidth="106.0" progress="0.31" style=" -fx-accent: green" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="329.0" layoutY="218.0" prefHeight="80.0" prefWidth="132.0" style="-fx-background-color: #21C190; -fx-background-radius: 3; -fx-border-radius: 3; -fx-border-color: black;">
@@ -114,7 +114,17 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Button layoutX="424.0" layoutY="349.0" mnemonicParsing="false" onAction="#realizarCura" prefHeight="44.0" prefWidth="82.0" style="-fx-background-radius: 5; -fx-border-color: black; -fx-border-radius: 5; -fx-border-width: 2;" text="Curar">
+      <Button layoutX="424.0" layoutY="343.0" mnemonicParsing="false" onAction="#realizarCura" prefHeight="44.0" prefWidth="82.0" style="-fx-background-radius: 5; -fx-border-color: black; -fx-border-radius: 5; -fx-border-width: 2;" text="Curar">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="70.0" layoutY="393.0" mnemonicParsing="false" onAction="#btnBACK" prefHeight="44.0" prefWidth="106.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: black; -fx-border-width: 2;" text="← Volver ">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="396.0" layoutY="393.0" mnemonicParsing="false" onAction="#cargarEquipo" prefHeight="44.0" prefWidth="138.0" style="-fx-background-radius: 5; -fx-border-color: black; -fx-border-radius: 5; -fx-border-width: 2;" text="Cargar Equipo">
          <font>
             <Font size="17.0" />
          </font>
