--- a/src/main/resources/es/cesur/progprojectpok/view/tienda-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/tienda-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="519.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.HelloController">
+<AnchorPane prefHeight="519.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.cesur.progprojectpok.controllers.TiendaController">
    <children>
       <ImageView fitHeight="651.0" fitWidth="1068.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -61,7 +61,7 @@
                </children>
             </AnchorPane>
          </children></AnchorPane>
-      <AnchorPane layoutX="389.0" layoutY="76.0" prefHeight="448.0" prefWidth="635.0" style="-fx-border-color: black; -fx-border-width: 10;">
+      <AnchorPane fx:id="cerrarTienda" layoutX="389.0" layoutY="76.0" prefHeight="448.0" prefWidth="635.0" style="-fx-border-color: black; -fx-border-width: 10;">
          <children>
             <AnchorPane layoutX="36.0" layoutY="38.0" prefHeight="128.0" prefWidth="136.0" style="-fx-border-color: white;">
                <children>
@@ -89,5 +89,9 @@
                </children>
             </AnchorPane>
          </children></AnchorPane>
+      <Button layoutX="918.0" layoutY="18.0" mnemonicParsing="false" onAction="#btnEXIT" prefHeight="45.0" prefWidth="106.0" style="-fx-border-color: white; -fx-background-color: 0;" text="Exit" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
    </children>
 </AnchorPane>
