--- a/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
+++ b/src/main/resources/es/cesur/progprojectpok/view/combate-view.fxml
@@ -134,12 +134,12 @@
             </Button>
          </children>
       </AnchorPane>
-      <ImageView fx:id="Perso2" fitHeight="150.0" fitWidth="174.0" layoutX="538.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgPok2" fitHeight="150.0" fitWidth="174.0" layoutX="538.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/blastoise-frente.gif" />
          </image>
       </ImageView>
-      <ImageView fx:id="Perso1" fitHeight="288.0" fitWidth="312.0" layoutX="154.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imgPok1" fitHeight="288.0" fitWidth="312.0" layoutX="154.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/charizar-espalda.gif" />
          </image>
